insurance-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: new-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insurance-deployment
  namespace: new-app
  labels:
    deploy: insurance
spec:
  replicas: 2
  selector:
    matchLabels:
      app: insurance
  template:
    metadata:
      labels:
        app: insurance
    spec:
      containers:
      - image: "registryogv7603.azurecr.io/insurance:1.0"
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 1000m
            memory: 4Gi
        imagePullPolicy: Always
        name: insurance
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: insurance
  namespace: new-app
spec:
  type: LoadBalancer
  selector:
    app: insurance
  ports:
  - protocol: TCP
    name: insurance-http
    port: 80
    targetPort: 8081
